--- a/force-app/main/default/classes/AccountCacheController.cls
+++ b/force-app/main/default/classes/AccountCacheController.cls
@@ -4,14 +4,14 @@
  * @Author             : ChangeMeIn@UserSettingsUnder.SFDoc
  * @Group              : 
  * @Last Modified By   : ChangeMeIn@UserSettingsUnder.SFDoc
- * @Last Modified On   : 21/1/2020, 10:20:28 am
+ * @Last Modified On   : 20/1/2020, 8:17:36 pm
  * @Modification Log   : 
  * Ver       Date            Author      		    Modification
  * 1.0    16/1/2020   ChangeMeIn@UserSettingsUnder.SFDoc     Initial Version
 **/
 //public class AccountCacheController {
 public with sharing class AccountCacheController {
-//test
+
   @AuraEnabled
   public static List<Account> getAccounts() {
      
@@ -19,11 +19,6 @@ public with sharing class AccountCacheController {
 	
       System.debug('@@@'+acc);
        return acc;
-
-if (true) 
-  {
-    return true;
-  }
   }
 
 
